--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,13 +1,7 @@
     steps:
     - name: 'gcr.io/cloud-builders/java/mvn'
       args: [ 'clean', 'package']
-    - name: 'ubuntu'
-      args: ['pwd']
-    - name: 'ubuntu'
-      args: ['ls']
-    - name: 'ubuntu'
-      args: ['ls', 'target/']
     - name: 'gcr.io/cloud-builders/docker'
-      args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/webapp-test', '.' ]
+      args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/webapp-test:$REVISION_ID', '.' ]
     images:
-    - 'gcr.io/$PROJECT_ID/webapp-test'
+    - 'gcr.io/$PROJECT_ID/webapp-test:$REVISION_ID'
